--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,8 +3,6 @@
 #    https://github.com/lukeeey/PerWorldInventory
 # ==============================================
 
-# Worlds in which inventories should be bundled.
-# This means that `world` will have the same inventory as `secondworld`.
-bundled-worlds:
-  world:
-    - secondworld
+# Worlds in which inventories should not be bundled.
+not-bundled-worlds: !!set
+  world: null
